@@ -1,0 +1,25 @@
+#!/usr/bin/env python3
+
+# Deskflow -- mouse and keyboard sharing utility
+# Copyright (C) 2024 Symless Ltd.
+#
+# This package is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# found in the file LICENSE that should have accompanied this file.
+#
+# This package is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+import lib.env as env
+
+env.ensure_in_venv(__file__, auto_create=True)
+env.install_requirements()
+
+import lib.colors as colors
+
+print(colors.SUCCESS_TEXT, "Python virtual environment is ready.")
